Korjattu bugi parserin dummykayttajan luomisessa