@@ -9,8 +9,10 @@ import org.junit.jupiter.api.Test;
 import java.io.ByteArrayInputStream;
 import java.io.InputStream;
 import java.util.ArrayList;
+import java.util.Arrays;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 
 public class ParserTest {
     Parser parser;
@@ -89,27 +91,31 @@ public class ParserTest {
    public void testParserShouldCreateThreeUsersWithPreferredTimesOneTwoAndThree() {
         String testiSyote = """
                 1 2 3 0
-                1 2 3 0
-                1 2 3 0
+                1 2 0
+                1 2 3  0
                 0 0 
                 """;
         InputStream testInput = new ByteArrayInputStream(testiSyote.getBytes());
         System.setIn(testInput);
         ArrayList<AikaTaulu> aikataulut = parser.kasitteleSyote();
-        AikaTaulu aikaTaulu = aikataulut.get(0);
-        ArrayList<Integer> ekanKayttajanToiveet = aikaTaulu.getKayttajanToiveet(0);
-        ArrayList<Integer> tokanKayttajantoiveet = aikaTaulu.getKayttajanToiveet(1);
-        ArrayList<Integer> kolmannenKayttajantoiveet = aikaTaulu.getKayttajanToiveet(2);
+        AikaTaulu aikaTaulu = aikataulut.getFirst();
+        ArrayList<Integer> dummynToiveet = aikaTaulu.getKayttajanToiveet(0);
+        ArrayList<Integer> ekanKayttajanToiveet = aikaTaulu.getKayttajanToiveet(1);
+        ArrayList<Integer> tokanKayttajantoiveet = aikaTaulu.getKayttajanToiveet(2);
+        ArrayList<Integer> kolmannenKayttajantoiveet = aikaTaulu.getKayttajanToiveet(3);
+        System.out.println(Arrays.toString(dummynToiveet.toArray()));
+        System.out.println(Arrays.toString(ekanKayttajanToiveet.toArray()));
+        System.out.println(Arrays.toString(tokanKayttajantoiveet.toArray()));
+        System.out.println(Arrays.toString(kolmannenKayttajantoiveet.toArray()));
+        assertTrue(dummynToiveet.isEmpty());
         assertEquals(1, ekanKayttajanToiveet.get(0));
         assertEquals(2, ekanKayttajanToiveet.get(1));
         assertEquals(3, ekanKayttajanToiveet.get(2));
         assertEquals(1, tokanKayttajantoiveet.get(0));
         assertEquals(2, tokanKayttajantoiveet.get(1));
-        assertEquals(3, tokanKayttajantoiveet.get(2));
         assertEquals(1, kolmannenKayttajantoiveet.get(0));
         assertEquals(2, kolmannenKayttajantoiveet.get(1));
-        assertEquals(3, tokanKayttajantoiveet.get(2));
+        assertEquals(3, kolmannenKayttajantoiveet.get(2));
    }
-
 
 }
